refactor: rearrange folder structure